feat: PointSaveRuleCustomRepositoryImplTest 작성 완료